--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <Your Name Here> # your name (or website title) here
+title: Taylor Lindsay # your name (or website title) here
 logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Graduate Student in... 
