--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,17 @@
-title: Taylor Lindsay # your name (or website title) here
+title: A Tutorial for Phylogenetic Analyses in Jupyter Notebook
 logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-  Graduate Student in... 
-  <br><br>
-  Department of ...
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+description: 
+> Created by Taylor Lindsay, December 2020
+taylor_lindsay@uri.edu
+
+This tutorial will walk you through the steps of creating a phylogenetic tree using Jupyter Notebook, with Python as a programing language. These concepts can be utilized at the command line, however this tutorial is intended to be introductory, and is better visualized and conceptualized n Jupyter Notebook. 
+
+### Steps to creating phylogenetic trees 
+
+1. Download sequence data
+2. Align sequence data
+3. Create Phylogenetic Tree
+4. Run statistical analyses 
+
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
