--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: A Tutorial for Phylogenetic Analyses in Jupyter Notebook
 logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
 description: 
-> Created by Taylor Lindsay, December 2020
+Created by Taylor Lindsay, December 2020
 taylor_lindsay@uri.edu
 
 This tutorial will walk you through the steps of creating a phylogenetic tree using Jupyter Notebook, with Python as a programing language. These concepts can be utilized at the command line, however this tutorial is intended to be introductory, and is better visualized and conceptualized n Jupyter Notebook. 
