--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: A Tutorial for Phylogenetic Analyses in Jupyter Notebook
 logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
-description: 
+description: > #text below
 Created by Taylor Lindsay, December 2020
 taylor_lindsay@uri.edu
 
