--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: A Tutorial for Phylogenetic Analyses in Python
 logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  ### Steps to creating phylogenetic trees   
-  <br><br>
+  ** Steps to creating phylogenetic trees **   
+  <br>
   1. Download sequence data
     <br>
   2. Align sequence data
