--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: A Tutorial for Phylogenetic Analyses in Python
 logo: "/images/animal_tree.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- Created by Taylor Lindsay, December 2020
+ Created by Taylor Lindsay, 
+ <br>
+ Last update: December 2020
  <br>
   Contact: taylor_lindsay@uri.edu
 
